# Tic-Tac-Toe-Game

./: CMakeLists.txt  README.md  Tic-Tac-Toe-Game.sln
.github/workflows/: Pipeline_Conﬁguration.yml
Tic-Tac-Toe-Game/: All_In_One.cpp  Database.cpp  Database.h  Game.cpp  Game.h  Tic-Tac-Toe-Game.pro  Tic-Tac-Toe-Game.vcxproj  entry_menu.cpp  entry_menu.h  entry_menu.ui  game_window.cpp  game_window.h  game_window.ui  login_window.cpp  login_window.h  login_window.ui  main.cpp  main2.cpp  profile.cpp  profile.h  profile.ui  profile_menu.cpp  profile_menu.h  profile_menu.ui  register_window.cpp  register_window.h  register_window.ui
Tic-Tac-Toe-Game2/: Game.h  Tic-Tac-Toe-Game.vcxproj  main.cpp  main2.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  profile_menu.cpp  profile_menu.ui  register_window.cpp  register_window.h  register_window.ui
build-Tic-Tac-Toe-Game-Desktop_Qt_5_12_12_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release  object_script.Tic-Tac-Toe-Game.Debug  object_script.Tic-Tac-Toe-Game.Release  ui_entry_menu.h  ui_game_window.h  ui_login_window.h  ui_profile_menu.h  ui_register_window.h
src/: Database.cpp  Database.h  entry_menu.cpp  entry_menu.h  game_window.cpp  game_window.h  login_window.cpp  login_window.h  main.cpp  profile_menu.cpp  profile_menu.h  register_window.cpp  register_window.h
test/: tst_database.cpp  tst_game.cpp  tst_integration.cpp  tst_main.cpp
ui/: entry_menu.ui  login_window.ui
